# BPNN

./: MANIFEST.in  README.md  environment.lock.yml  environment.yml  setup.cfg  setup.py  tox.ini
scripts/bpnn/: bayesian_continual_learning.py  fewshot_uncertainty.py
scripts/bpnn/ablations/: cold_posterior_large.py  cold_posterior_small.py  few_shot_ablations.py  generalization_bounds.py  pac_bayes_objective.py  sum_of_kronecker_product_approximation.py
scripts/kfoc/: main.py
src/bpnn/: bpnn.py  criterions.py  curvature_scalings.py  pnn.py  utils.py
src/curvature/: curvatures.py  lenet5.py  utils.py
tests/: conftest.py  test_bpnn.py  test_curvature_utils.py  test_curvatures.py  test_pnn.py
tools/: evaluate_experiment.py  fewshot.py  fewshot_dataloaders.py  mnist_dataloaders.py  not_mnist.py  run_experiment.py  wrgbd.py  wrgbd_dataloaders.py
