# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = bpnn
description = Bayesian Progressive Neural Networks
author = Dominik Schnaus
author_email = dominik.schnaus@tum.de
license = GPL-3.0-or-later
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3


[options]
zip_safe = False
packages =
    src.bpnn
    src.curvature
    tools
include_package_data = True

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# dependency_links = https://download.pytorch.org/whl/cu111/torch-1.9.0+cu111-cp38-cp38-linux_x86_64.whl, https://download.pytorch.org/whl/cu111/torchvision-0.10.0+cu111-cp38-cp38-linux_x86_64.whl
# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata
    pip
    numpy
    scipy
    pandas
    tqdm
    psutil
    pillow
    matplotlib
    seaborn
    torch
    torchvision
    scikit-learn
    xlrd
    openpyxl

[options.package_data]
src = curvature/lenet5_mnist.pth

[options.packages.find]
exclude =
    tests

[options.extras_require]
# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this py.test issue.
addopts =
    --cov bpnn --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 120
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0.2
package = bpnn
extensions =
    dsproject
    no_skeleton
    pre_commit
